# fswatch-visualizer

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
shared/: types.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  watcher.rs
src/components/: AppShell.tsx  ChartsPanel.tsx  EventTable.tsx  EventTypePill.tsx  SideNav.tsx  StatCard.tsx  TopBar.tsx
src/pages/: Dashboard.tsx  EventDetails.tsx  Events.tsx  Settings.tsx  WatchConfig.tsx
src/store/: appStore.ts
src/utils/: backend.ts  format.test.ts  format.ts
